unpackaged/main/default/objects/EventApi__Sponsor_Package__c/EventApi__Sponsor_Package__c.object-meta.xml
<CustomObject>
    <description>Sponsor packages track the benefits and levels of sponsorship available for an event.</description>
    <label>Sponsor Package</label>
    <nameField>
        <label>Sponsor Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsor Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>