unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__AR_Account__c.field-meta.xml
<CustomField>
    <fullName>EventApi__AR_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the GL Account used for A/R transactions.</description>
    <inlineHelpText>Identifies the GL Account used for A/R transactions.</inlineHelpText>
    <label>A/R Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Sponsor Packages (A/R Account)</relationshipLabel>
    <relationshipName>SponsorPackage_AR_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>