unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Assignments_Display_Label__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Assignments_Display_Label__c</fullName>
    <description>RESERVED</description>
    <inlineHelpText>RESERVED</inlineHelpText>
    <label>RESERVED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>