unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Deferred_Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Deferred_Revenue_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deferred Revenue Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Items (Deferred Revenue Account)</relationshipLabel>
    <relationshipName>Items3</relationshipName>
    <type>Lookup</type>
</CustomField>