unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Description__c</fullName>
    <description>Product description.</description>
    <inlineHelpText>Product description.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>