unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Display_Name__c</fullName>
    <description>Sponsor package name as you would like it to appear in the Portal.</description>
    <inlineHelpText>Sponsor package name as you would like it to appear in the Portal.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>