unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Display_Order__c</fullName>
    <description>Enter the number for the order that the sponsor package should be displayed in.</description>
    <inlineHelpText>Enter the number for the order that the sponsor package should be displayed in.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>