unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related event.</description>
    <inlineHelpText>Link to the related event.</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Sponsor Packages</relationshipLabel>
    <relationshipName>Sponsor_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>