unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Flex_Day_of_the_Month__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Flex_Day_of_the_Month__c</fullName>
    <label>Flex Day of the Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>