unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Form__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to a form created in the &quot;Form Builder&quot; app. Customers will see the form when they select the sponsor package to purchase.</description>
    <inlineHelpText>Link to a form created in the &quot;Form Builder&quot; app. Customers will see the form when they select the sponsor package to purchase.</inlineHelpText>
    <label>Sponsor Package Form</label>
    <referenceTo>PagesApi__Form__c</referenceTo>
    <relationshipLabel>Sponsor Packages</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>