unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Image_Path__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Image_Path__c</fullName>
    <defaultValue>&quot;https://s3.us-east-1.amazonaws.com/fonteva-customer-media/00D1U000000FLVyUAO/WcRwRzNr_placeholder_svg&quot;</defaultValue>
    <description>Image displays in the shopping cart and checkout page.</description>
    <inlineHelpText>Image displays in the shopping cart and checkout page.</inlineHelpText>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>