unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Image_URL__c</fullName>
    <description>Secure (&quot;https://&quot;) url where a large, 250 x 250 pixels, image is hosted to display on sponsor related pages and printed materials. Valid image file types include *.gif, *.png, *.jpg. Recommend the file size does not exceed 50kb.</description>
    <inlineHelpText>Secure (&quot;https://&quot;) url where a large, 250 x 250 pixels, image is hosted to display on sponsor related pages and printed materials. Valid image file types include *.gif, *.png, *.jpg. Recommend the file size does not exceed 50kb.</inlineHelpText>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>