unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Invoice_Payment_Priority__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Invoice_Payment_Priority__c</fullName>
    <description>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</description>
    <inlineHelpText>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</inlineHelpText>
    <label>Payment Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>