unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the item is considered available for sale and will be made available for selection against Invoice, Sales Order, Receipt, and EPayment Lines.</description>
    <inlineHelpText>When checked, the item is considered available for sale and will be made available for selection against Invoice, Sales Order, Receipt, and EPayment Lines.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>