unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Is_Tax_Deductible__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Tax_Deductible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the item is a tax deductible donation. The cost per unit will drive the tax deductible amount on the sales order.</description>
    <inlineHelpText>Check if the item is a tax deductible donation. The cost per unit will drive the tax deductible amount on the sales order.</inlineHelpText>
    <label>Is Tax Deductible</label>
    <type>Checkbox</type>
</CustomField>