unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Item__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Sponsorship Package to the Sponsorship Item for its event.</description>
    <inlineHelpText>Relates the Sponsorship Package to the Sponsorship Item for its event.</inlineHelpText>
    <label>RESERVED</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Sponsor Packages</relationshipLabel>
    <relationshipName>Sponsor_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>