unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Item_Class__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Item_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** The Item Class for sponsor packages are auto-generated for each event and/or event category based on configurations.</description>
    <inlineHelpText>** System Calculated ** The Item Class for sponsor packages are auto-generated for each event and/or event category based on configurations.</inlineHelpText>
    <label>RESERVED</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Sponsor Packages</relationshipLabel>
    <relationshipName>Sponsor_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>