unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Line_Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Line_Description__c</fullName>
    <description>Short description that appears on receipts and invoices.</description>
    <inlineHelpText>Short description that appears on receipts and invoices.</inlineHelpText>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>