unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Maximum_Number_of_Assignments__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Maximum_Number_of_Assignments__c</fullName>
    <description>RESERVED</description>
    <label>RESERVED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>