unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Price__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Price__c</fullName>
    <description>The list price of the sponsor package.</description>
    <inlineHelpText>The list price of the sponsor package.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>