unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Quantity_Available__c</fullName>
    <description>Maximum number of this sponsor packages of this type that can be sold for the event.</description>
    <inlineHelpText>Maximum number of this sponsor packages of this type that can be sold for the event.</inlineHelpText>
    <label>Quantity Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>