unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Quantity_Remaining__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Quantity_Remaining__c</fullName>
    <description>The quantity available minus the number sold.</description>
    <formula>IF(EventApi__Quantity_Available__c == 0,0,EventApi__Quantity_Available__c - EventApi__Quantity_Sold__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The quantity available minus the number sold.</inlineHelpText>
    <label>Quantity Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>