unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Quantity_Sold__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Quantity_Sold__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of sponsor packages of this type sold.</description>
    <inlineHelpText>The number of sponsor packages of this type sold.</inlineHelpText>
    <label>Quantity Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>