unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Restrict_Number_of_Assignments__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Restrict_Number_of_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RESERVED</description>
    <inlineHelpText>RESERVED</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>