unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Revenue_Recognition_Term_Rule__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Revenue_Recognition_Term_Rule__c</fullName>
    <label>Revenue Recognition Term Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Partial Credit</fullName>
            </value>
            <value>
                <fullName>Flex Day</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>