unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/EventApi__Tax_Class__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Tax_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populate this field for a sponsor package that needs to apply a tax.</description>
    <inlineHelpText>Populate this field for a sponsor package that needs to apply a tax.</inlineHelpText>
    <label>Tax Class</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Tax Sponsor Packages</relationshipLabel>
    <relationshipName>Tax_Sponsor_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>