unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/ROEApi__Event_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>ROEApi__Event_Display_Name__c</fullName>
    <description>**System Calculated** Event Display Name</description>
    <inlineHelpText>**System Calculated** Event Display Name</inlineHelpText>
    <label>SYSTEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>