unpackaged/main/default/objects/EventApi__Sponsor_Package__c/fields/ROEApi__Event_Name__c.field-meta.xml
<CustomField>
    <fullName>ROEApi__Event_Name__c</fullName>
    <description>**System Calculated** Event Display Name</description>
    <formula>EventApi__Event__r.EventApi__Display_Name__c</formula>
    <inlineHelpText>**System Calculated** Event Display Name</inlineHelpText>
    <label>SYSTEM</label>
    <type>Text</type>
</CustomField>