unpackaged/main/default/objects/EventApi__Sponsor_Package__c/listViews/EventApi__All.listView-meta.xml
<ListView>
    <fullName>EventApi__All</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Event__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>